working usrp recording driver

--- a/usrp_driver/Makefile
+++ b/usrp_driver/Makefile
@@ -1,11 +1,10 @@
 CC=g++
-CFLAGS = -lboost_program_options -lboost_iostreams -pthread -luhd -lstdc++fs -o logger
+CFLAGS = -lboost_system -lboost_program_options -lboost_iostreams -pthread -luhd -lstdc++fs -o logger
 SOURCES=main.cpp
 EXECUTABLE=IQ_Recorder
 
 $(EXECUTABLE): $(SOURCES)
 	$(CC) $(SOURCES) $(CFLAGS)
-#	$(CC) main.o -o logger $(CFLAGS)
 
 .PHONY : clean
 clean :
